--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PROJECT_NAME=ProjectDrupal
-PROJECT_BASE_URL=drupal.localhost
+PROJECT_BASE_URL=drupal.stage.localhost
 
 DB_NAME=drupal
 DB_USER=drupal
