--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_DRIVER=mysql
 MARIADB_TAG=10.3-3.6.4
 
 ### --- VANILLA DRUPAL ----
-DRUPAL_TAG=8-4.14.14
+DRUPAL_TAG=v1
 
 ### --- PHP ----
 PHP_TAG=7.3-dev-4.13.11
